# kurs4_course_work

./: README.md  main.py  pyproject.toml
data/: definitions.py
src/: connector.py  my_exeption.py  parser.py  vacancies.py
