[tool.poetry]
name = "kurs4-course-work"
version = "0.1.0"
description = ""
authors = ["Anna Soboleva <asoboleva.avs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.2"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
